<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/spaces_double"
    tools:context=".feature.candidate.JobDescriptionActivity">

    <TextView
        android:id="@+id/txt_job_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_headline"
        android:textStyle="bold"
        tools:text="Job Title"/>

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Full time - Bandung"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_triple"
        android:text="@string/description"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:gravity="center_vertical"
        android:text="-"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:text="@string/requirement"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_requirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:gravity="center_vertical"
        android:text="-"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:text="@string/responsibility"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_responsibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:gravity="center_vertical"
        android:text="-"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:text="@string/deadline"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:gravity="center_vertical"
        android:text="-"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:text="@string/total_candidates"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_total_candidates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaces_normal"
        android:gravity="center_vertical"
        android:text="0"/>

</LinearLayout>